# Module_Web_9_MHW

./: authors.json  main.py  pyproject.toml  uploading to the database.py
quotes_scraper/quotes_scraper/: items.py  pipelines.py  settings.py
quotes_scraper/quotes_scraper/spiders/: quotes_spider.py
